--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,8 +1,8 @@
 {% if site.search_enabled != false %}
-   <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.min.js' | absolute_url }}"></script>
-   <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.multi.min.js' | absolute_url }}"></script>
-   <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.stemmer.support.min.js' | absolute_url }}"></script>
-   <script type="text/javascript" src="{{ '/assets/js/vendor/lunr.ru.min.js' | absolute_url }}"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.multi.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.stemmer.support.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.ru.min.js"></script>
 
    <!-- <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.13.0/min/lunr.multi.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.13.0/min/lunr.stemmer.support.min.js"></script>
