--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,10 +1,33 @@
 {% if site.search_enabled != false %}
+
 <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.multi.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.stemmer.support.min.js"></script>
 <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.ru.min.js"></script>
 
-   <!-- <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.13.0/min/lunr.multi.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.13.0/min/lunr.multi.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.13.0/min/lunr.stemmer.support.min.js"></script>
-   <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.13.0/min/lunr.ru.min.js"></script> -->  
+   <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.13.0/min/lunr.ru.min.js"></script> -->
+
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+   (function (m, e, t, r, i, k, a) {
+      m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
+      m[i].l = 1 * new Date();
+      for (var j = 0; j < document.scripts.length; j++) { if (document.scripts[j].src === r) { return; } }
+      k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+   })
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(95607090, "init", {
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true
+   });
+</script>
+<noscript>
+   <div><img src="https://mc.yandex.ru/watch/95607090" style="position:absolute; left:-9999px;" alt="" /></div>
+</noscript>
+<!-- /Yandex.Metrika counter -->
 {% endif %}
