--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,3 +1,4 @@
 <footer class="site-footer">
-   Copyright &copy; <a href="https://t.me/remote_adm">Андрей Казунин</a>
+   Контент &copy; <a href="https://t.me/remote_adm">Андрей Казунин</a><br>
+   Сайт &copy; <a href="https://t.me/aharito">Aharito</a>
  </footer>
