--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,4 +1,4 @@
 <footer class="site-footer">
    Контент &copy; <a href="https://t.me/remote_adm">Андрей Казунин</a><br>
-   Сайт &copy; <a href="https://t.me/aharito">Aharito</a>
+   <small>Сайт &copy; <a href="https://t.me/aharito">Aharito</a></small>
  </footer>
