--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,3 +1,5 @@
+<meta name="robots" content="noindex, nofollow">
+
 <script type="text/javascript">
    (function (m, e, t, r, i, k, a) {
       m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
