--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,4 +1,6 @@
 <footer class="site-footer">
   Контент &copy; <a href="https://t.me/remote_adm">Андрей Казунин</a><br>
   <small>Сайт &copy; <a href="https://t.me/aharito">Aharito</a></small>
+
+  <a href="https://visitorbadge.io/status?path=https%3A%2F%2Fevo3blog.aharito.ru%2F"><img src="https://api.visitorbadge.io/api/daily?path=https%3A%2F%2Fevo3blog.aharito.ru%2F&label=%D0%97%D0%90%20%D0%A1%D0%A3%D0%A2%D0%9A%D0%98&countColor=%23263759" /></a>
 </footer>
