--- a/_includes/head_custom.html
+++ b/_includes/head_custom.html
@@ -1,5 +1,6 @@
 <meta name="robots" content="noindex, nofollow">
 
+<!-- Yandex.Metrika counter -->
 <script type="text/javascript">
    (function (m, e, t, r, i, k, a) {
       m[i] = m[i] || function () { (m[i].a = m[i].a || []).push(arguments) };
@@ -12,7 +13,8 @@
    ym(95607090, "init", {
       clickmap: true,
       trackLinks: true,
-      accurateTrackBounce: true
+      accurateTrackBounce: true,
+      webvisor: true
    });
 </script>
 <noscript>
@@ -21,12 +23,12 @@
 <!-- /Yandex.Metrika counter -->
 
 {% if site.search_enabled != false %}
-   <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.min.js"></script>
-   <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.multi.min.js"></script>
-   <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.stemmer.support.min.js"></script>
-   <script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.ru.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.multi.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.stemmer.support.min.js"></script>
+<script type="text/javascript" src="{{ site.baseurl }}/assets/js/vendor/lunr.ru.min.js"></script>
 
-   <!-- <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.13.0/min/lunr.multi.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.13.0/min/lunr.multi.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.13.0/min/lunr.stemmer.support.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/lunr-languages@1.13.0/min/lunr.ru.min.js"></script> -->
 {% endif %}
